--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,6 +14,8 @@ import "../assets/base.css";
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<title>Primula - The empty network
+		</title>
 		<script>
 			addEventListener("DOMContentLoaded", function () {
 				document.body.classList.add("loaded");
