--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 // Component Imports
 import Header from "../components/header.vue";
+import Copyright from "../components/copyright.vue";
 import Introduction from "../components/introduction.vue";
 import "../assets/base.css";
 
@@ -14,8 +15,7 @@ import "../assets/base.css";
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<title>Primula - The empty network
-		</title>
+		<title>Primula - The empty network</title>
 		<script>
 			addEventListener("DOMContentLoaded", function () {
 				document.body.classList.add("loaded");
@@ -27,6 +27,7 @@ import "../assets/base.css";
 		<main>
 			
 			<Introduction />
+
 			<article>
 				<h1>Lorem</h1>
 
@@ -85,6 +86,7 @@ import "../assets/base.css";
 					egestas nibh, in fermentum turpis. In ac auctor metus.
 				</p>
 			</article>
+			<Copyright />
 		</main>
 	</body>
 </html>
