--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import "../assets/base.css";
 // https://docs.astro.build/core-concepts/astro-components/
 ---
 
-<html lang="en">
+<html lang="zh">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
@@ -26,7 +26,11 @@ import "../assets/base.css";
 		<Header />
 		<main>
 			
-			<Introduction />
+			<Introduction
+			    Title="Primula Introduction"
+			    Description="這是什麼? 這是一個什麼都沒寫的網站前端."
+			    Href="./JoinServer"
+			/>
 
 			<article>
 				<h1>Lorem</h1>
